[build-system]
requires = ["flit_core >=3.2,<4", "python_version >= 3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "align"
authors = [{name = "Umair Khan", email = "umair.khan@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["numpy >= 1.21", "pytest >= 6.2"]
